[package]
name = "plume_core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "rand_core", "pem"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
dotenv = "0.15.0"
